# spotify_podcast

./: .env.example  .gitignore  LICENSE  README.md  manage.py  pyproject.toml
podcasts/: mixins.py  serializers.py  services.py  urls.py  views.py
spotify_podcast_api/: asgi.py  settings.py  urls.py  wsgi.py
